# timetable-system

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  combinesources.bat  data.json
.github/workflows/: ci.yml
src/: Admin.cpp  Admin.hpp  AuthManager.cpp  AuthManager.hpp  Group.hpp  GroupManagementMenu.cpp  GroupManagementMenu.hpp  GroupManager.cpp  GroupManager.hpp  InputUtility.hpp  LectureManagementMenu.cpp  LectureManagementMenu.hpp  Lecturer.hpp  LecturerManagementMenu.hpp  LecturerManager.cpp  LecturerManager.hpp  Module.cpp  Module.hpp  ModuleManagementMenu.cpp  ModuleManagementMenu.hpp  ModuleManager.cpp  ModuleManager.hpp  Persistence.cpp  Persistence.hpp  Room.hpp  RoomManagementMenu.cpp  RoomManagementMenu.hpp  RoomManager.cpp  RoomManager.hpp  SampleData.cpp  SampleData.hpp  Session.hpp  SessionType.hpp  SessionTypeManagementMenu.cpp  SessionTypeManagementMenu.hpp  SessionTypeManager.cpp  SessionTypeManager.hpp  Student.cpp  Student.hpp  TimeUtility.hpp  (+17 more)
tests/: tests.cpp
